crates/test-files/fixtures/compile_errors/duplicate_var_in_contract_method.fe
contract Foo:
    pub def bar():
        let foo: u8
        let foo: u8
